--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <p>Download Excursion (Coming soon!)</p>
     <p>Icon</p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p class="footnote">&copy;Excursion<p>
+    <p class="footnote">&copy;&nbsp;Excursion<p>
   </body>
 </html>
