--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <title>Excursion</title>
   </head>
   <body>
-    <h1>Discover hidden places in the world around you</h1>
-    <p>Download Excursion (Coming soon!)</p>
-    <p>Image</p>
-    <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-    <p>Image</p>
-    <p>Download Excursion (Coming soon!)</p>
-    <p>Icon</p>
-    <h2>Coming Soon for iPhone and Android</h2>
-    <p class="footnote">&copy;&nbsp;Excursion<p>
+    <div id="excursion" class="main-style">
+      <h1 class="h1-text">Discover hidden places in the world around you</h1>
+      <p class="download-link">Download Excursion (Coming soon!)</p>
+      <br/>
+      <video controls src="resources/video/excursion.mp4">
+      </video>
+      <br/>
+      <h2 class="h2-text">Your personal travel guide</h2>
+      <p class="gray-text">Excursion remembers places you like, and recommends new points of interest around you.</p>
+      <p><img src="resources/images/camp.jpg"</p>
+      <p><img src="resources/images/phone.png"></p>
+      <h2 class="h2-text">Coming Soon for iPhone and Android</h2>
+      <p class="download-link">Download Excursion (Coming soon!)</p>
+      <p class="footnote">&copy;&nbsp;Excursion<p>
+    </div>
   </body>
 </html>
